# Countdown

./: .gitignore  CountdownGame.cabal  TestSite.html  todo.md
src/: Main.hs
src/Countdown/: Game.hs  Lists.hs
src/Countdown/Game/: Attempts.hs  Players.hs
src/CountdownGame/: Actions.hs  Algorithm.hs  Cookies.hs  Game.hs  Parser.hs  Players.hs  PlayersRepository.hs  Rounds.hs  State.hs
src/CountdownGame/State/: Challanges.hs  Definitions.hs  Rounds.hs  Snapshots.hs
src/CountdownGame/Views/: Admin.hs  Play.hs  Register.hs
src/lib/Countdown/: Expressions.hs
src/lib/Countdown/Game/: Attempts.hs  Random.hs
src/web/: Main.hs
src/web/CountdownGame/: Actions.hs  Database.hs  Players.hs  PlayersRepository.hs  Spiel.hs  State.hs
src/web/CountdownGame/Database/: Models.hs
src/web/CountdownGame/Spiel/: Phasen.hs
src/web/CountdownGame/State/: Challanges.hs  Definitions.hs  Rounds.hs  Snapshots.hs
src/web/CountdownGame/Views/: Admin.hs  Anleitung.hs  Highscores.hs  Play.hs
static/: admin.js  player.js  styles.css
test/: Spec.hs
test/Countdown/: AttemptsSpecs.hs
test/CountdownGame/: GameSpecs.hs  ParserSpec.hs
