name:                countdown
version:             0.1.0.0
synopsis:            Countdown-Game fuer den DeveloperOpenSpace 2015
-- description:         
license:             MIT
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          carsten@gettingsharper.de
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Countdown.Expressions
                     , Countdown.Parser
                     , Countdown.Lists
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , text
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable CountdownGame
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , transformers
                     , containers
                     , aeson==0.10.0.0
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , blaze-builder
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , network
                     , wai-middleware-static
                     , wai-extra
                     , cookie
                     , time
                     , parsec
                     , hspec   == 2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite CountdownTests
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
    , src
  main-is:
      Spec.hs
  default-language:    
      Haskell2010
  build-depends:       base >=4.8 && <4.9
                     , countdown
                     , transformers
                     , containers
                     , aeson==0.10.0.0
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , blaze-builder
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , network
                     , wai-middleware-static
                     , wai-extra
                     , cookie
                     , time
                     , parsec
                     , hspec   == 2.*